# rinha-2024-q1

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  schema-v1.dbm  schema-v2.dbm  schema.dbm
.cargo/: .config.toml  config.toml
benches/: http_parse.rs
config/: nginx.conf  redis.conf
migrations/: initial_insert.sql  initial_model.sql
src/: api.rs  lib.rs
src/api/: mod.rs
src/application/: cache.rs  mod.rs  repositories.rs
src/application/adapters/: mod.rs
src/domain/: account.rs  errors.rs  mod.rs  transaction.rs
src/infrastructure/: adapters.rs  mod.rs  redis_lock.rs
src/infrastructure/server_impl/: request.rs  response.rs  server.rs
src/server_impl/: request.rs  response.rs  server.rs
