[package]
name = "rinha-de-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^1.5"
either = "1.10.0"
eyre = "0.6.12"
futures-util = "0.3.30"
futures = "0.3.30"
regex-lite = "0.1"
strum = { version = "0.26", features = ["derive"] }
time = { version = "^0.3", features = ["serde"] }
tokio = { version = "^1", features = ["full"] }
fastrand = "2"

# databasey
redis = { version = "0.24", features = ["ahash", "tokio-comp", "connection-manager"] }

# json-parsing
serde = { version = "^1", features = ["derive"] }
simd-json = { version = "0.13.8", features = ["serde_impl"] }

# optimization
ahash = "0.8.9"
compact_str = { version = "0.8.0-beta", features = ["serde"] }
enum-map = "3.0.0-beta.2"
fnv = "^1"
httparse = "1.8"
memchr = "^2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "http_parse"
harness = false