[package]
name = "rinha-de-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = { version = "0.5.1", features = ["serde"] }
bytes = "^1.5"
derive_more = { version = "1.0.0-beta.6", features = ["deref"] }
either = "1.10.0"
eyre = "0.6.12"
fastrand = "2"
futures = "0.3.30"
futures-util = "0.3.30"
listenfd = "^1"
regex-lite = "0.1"
strum = { version = "0.26", features = ["derive"] }
time = { version = "^0.3", features = ["serde", "formatting"] }
tokio = { version = "^1", features = ["full"] }

# databasey
redis = { version = "0.24", features = ["ahash", "tokio-comp", "connection-manager"] }
heed = { version = "0.20.0-alpha.9", features = ["serde-bincode"] }

# json-parsing
serde = { version = "^1", features = ["derive"] }
serde_json = "1"
simd-json = { version = "0.13.8", features = ["serde_impl"] }

# optimization
ahash = "0.8.9"
compact_str = { version = "0.8.0-beta", features = ["serde"] }
enum-map = "3.0.0-beta.2"
fnv = "^1"
drop_bomb = "0.1.5"
mimalloc = { version = "0.1", default-features = false }

# server impl
http = "1"
httparse = "1.8"
memchr = "^2"
unicase = "2.7.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "http_parse"
harness = false

#[profile.release]
#debug = true
#strip = false