[package]
name = "rinha-de-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^1.5"
derive_more = { version = "1.0.0-beta.6", features = ["deref", "deref_mut"] }
either = "1.10.0"
eyre = "0.6.12"
fastrand = "2"
futures = "0.3.30"
futures-util = "0.3.30"
listenfd = "^1"
regex-lite = "0.1"
parking_lot = { version = "0.12.1", features = [] }
strum = { version = "0.26", features = ["derive"] }
time = { version = "^0.3", features = ["serde", "formatting"] }
tokio = { version = "^1", features = ["full"] }
zerocopy = { version = "0.8.0-alpha.7", features = ["simd"] }
zerocopy-derive = "0.8.0-alpha.7"

# shared memory
memmap2 = "0.9.4"
shared_memory = "0.12.4"
linux-futex = "0.2"

# json-parsing
serde = { version = "^1", features = ["derive"] }
serde_json = "1"
simd-json = { version = "0.13.8", features = ["serde_impl"] }

# optimization
ahash = "0.8.9"
compact_str = { version = "0.8.0-beta", features = ["serde"] }
enum-map = "3.0.0-beta.2"
fnv = "^1"
mimalloc = { version = "0.1", default-features = false }

# server impl
http = "1"
httparse = "1.8"
memchr = "^2"
unicase = "2.7.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "http_parse"
harness = false